sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:9: error: ')' expected but integer literal found.
			gnomePos +=1
                                   ^