sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
     var swapped = true;
     var gnomePos = 1;
	do
	{
		swapped = false;
		if (plusPetit(gnomePos -1, gnomePos)
			gnomePos +=1
		else
		{
			echange(gnomePos, gnomePos -1)
			swapped = true
			if (gnomePos !=1)
				gnomePos -=1
		}
		
		
	} while ( gnomePos < getNombreValeurs() || swapped)
}
